--- a/style.css
+++ b/style.css
@@ -132,4 +132,11 @@
         {
             color: lightcoral;
         }
+@media (max-width: 768px) {
+    .basic{
+        flex-direction: column; 
+        align-items: center;
+        padding: 10px; 
+        margin-top: 80px;
+    }
     
