--- a/style.css
+++ b/style.css
@@ -40,15 +40,18 @@
         .image
         {
             float: left;
-            margin-right: 50px;
+            margin-top: 9%;
+            margin-bottom: 20%;
+            transition: color 0.5s ease, transform 0.5s ease; 
            
         }
         .image:hover
         {
             background-color:  #242f44;
             border-radius: 500%;
-            box-shadow: 2px 2px 2px;
+            box-shadow: 5px 5px 5px;
             object-fit: cover;
+            
         }
         .image img
         {
@@ -135,12 +138,12 @@
         {
             color: lightcoral;
         }
-@media (max-width: 768px) {
-    .basic{
-        flex-direction: column; 
-        align-items: center;
-        padding: 10px; 
-        margin-top: 80px;
-    }
-}
+        @media (max-width: 768px) {
+            .basic{
+                flex-direction: column; 
+                align-items: center;
+                padding: 10px; 
+                margin-top: 80px;
+            }
+        }
     
